--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 #REACT_APP_API_URL=http://localhost:4000/api/
-REACT_APP_API_URL=https://sitramuci-sindicato.onrender.com/api/afiliados
+REACT_APP_API_URL=https://sitramuci-sindicato.onrender.com/api
